--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.3.0",
+    "@react-icons/all-files": "^4.1.0",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-sass": "^4.5.0",
+    "global": "^4.4.0",
+    "node-sass": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
